--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
+    "framer-motion": "^5.3.3",
     "gatsby": "^4.2.0",
     "gatsby-plugin-image": "^2.3.0",
     "gatsby-plugin-manifest": "^4.3.0",
@@ -22,11 +24,21 @@
     "gatsby-plugin-sass": "^5.3.0",
     "gatsby-plugin-sharp": "^4.3.0",
     "gatsby-plugin-sitemap": "^5.3.0",
+    "gatsby-plugin-theme-switcher": "^1.0.0",
+    "gatsby-source-datocms": "^3.0.11",
     "gatsby-source-filesystem": "^4.3.0",
     "gatsby-transformer-sharp": "^4.3.0",
     "react": "^17.0.1",
+    "react-datocms": "^1.6.6",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "sass": "^1.44.0"
+  },
+  "devDependencies": {
+    "@iconify/react": "^3.1.0",
+    "autoprefixer": "^10.4.0",
+    "gatsby-plugin-postcss": "^5.3.0",
+    "postcss": "^8.4.4",
+    "tailwindcss": "^2.2.19"
   }
 }
