--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby-plugin-sass": "^5.3.0",
     "gatsby-plugin-sharp": "^4.3.0",
     "gatsby-plugin-sitemap": "^5.3.0",
+    "gatsby-plugin-smoothscroll": "^1.2.0",
     "gatsby-plugin-theme-switcher": "^1.0.0",
     "gatsby-source-datocms": "^3.0.11",
     "gatsby-source-filesystem": "^4.3.0",
