--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "sass": "^1.44.0"
   },
   "devDependencies": {
+    "@iconify/icons-iconoir": "^1.1.2",
     "@iconify/react": "^3.1.0",
     "autoprefixer": "^10.4.0",
     "gatsby-plugin-postcss": "^5.3.0",
